<resources>
    <string name="app_name">NIVL</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="date">Дата</string>
    <string name="wath_video">Watch video</string>
    <string name="download_more_apod">Download more APOD</string>
    <string name="get_apod_on_date">Get APOD on date</string>
    <string name="date_picker">Date Picker</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="date_on_future_err">Selected date is later than today</string>
    <string name="connection_error">Connection lost</string>
    <string name="download_error">Download error</string>
    <string name="app_name_full">NASA Image&amp;Video Library</string>
    <string name="connection_error_message">Please check your Internet connection and try again</string>
    <string name="update_apod_data">Update APOD Data</string>
    <string name="data_not_load">Data not load</string>
    <string name="search_for">Search for...</string>
    <string name="go">Go</string>
    <string name="no_result_error">No result</string>
    <string name="no_result_message">On your request no results were found</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="audio_not_found_error">Audio not found</string>
    <string name="audio_not_found_message">This audio is cannot downloaded</string>
    <string name="select_categories">Select one of the categories</string>
    <string name="loading">Loading</string>
    <string name="loading_message">Data load in progress</string>
</resources>
